2011-04-12  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/48549
	* combine.c (propagate_for_debug): Also stop after BB_END of
	this_basic_block.  Process LAST and just stop processing after it.
	(combine_instructions): If last_combined_insn has been deleted,
	set last_combined_insn to its PREV_INSN.

2011-04-12  Nick Clifton  <nickc@redhat.com>

	* config/v850/v850.c (expand_prologue): Do not use the CALLT
	instruction for interrupt handlers if the target is the basic V850
	architecture.
	(expand_epilogue): Likewise.

2011-04-12  Jakub Jelinek  <jakub@redhat.com>

	PR c/48517
	* c-typeck.c (store_init_value): Set TREE_TYPE (decl) to
	qualified type.

2011-04-11  Joseph Myers  <joseph@codesourcery.com>

	* common.opt (Tbss=, Tdata=, Ttext=): New options.

2011-04-11  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	Backport from mainline:
	2011-04-06  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* config/alpha/osf5.h (MAX_OFILE_ALIGNMENT): Define.

2011-04-09  Duncan Sands  <baldrick@free.fr>

	* tree.c (array_type_nelts): Bail out if TYPE_MAX_VALUE not set.

2011-04-08  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR target/47829
	gcc/config.gcc: disable unwind table generation for crtbegin/crtend
	on i386-*-freebsd.

2011-04-08  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/48377
	* tree-vect-data-refs.c (vector_alignment_reachable_p): Set
	is_packed to true even for types with smaller TYPE_ALIGN than
	TYPE_SIZE.

2011-04-07  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/sse.md: Update copyright year.
	(avx_cmp<ssescalarmodesuffix><mode>3): Add missing output
	register constraint.
	(*vec_concatv2sf_avx): Fix wrong register constraint in
	alternative 3 of operand 1.
	(*vec_set<mode>_0_avx): Avoid combining registers from different
	units in a single alternative.
	(*vec_set<mode>_0_sse4_1): Ditto.
	(*vec_set<mode>_0_sse2): Ditto.
	(vec_set<mode>_0): Ditto.
	(sse2_storehpd): Ditto.
	(sse2_loadhpd): Ditto.